# BGPC

./: .env.example  .gitignore  LICENSE  README.md  config.ci.yaml  config.yaml.example  game_watch.py  pyproject.toml  state.json
.github/workflows/: game-watch.yml
scripts/: register-scheduled-task.ps1  run-game-watch.ps1
