[project]
name = "bgpc"
version = "0.1.0"
description = "Daily board-game price watcher for tarsasjatekok.com"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["game_watch.py", "README.md", "config.yaml.example"]

[tool.hatch.build.targets.wheel]
only-include = ["game_watch.py"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "BLE"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Long HTML template strings and argparse help text
"game_watch.py" = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = false
warn_unused_ignores = true
disallow_untyped_defs = false
files = ["game_watch.py"]
